--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Smoke_login_firebase">
-
+        <activity
+            android:name=".Details"
+            android:exported="true" />
         <activity
             android:name=".Register22"
-            android:label="Registration form"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Registration form" />
         <activity
             android:name=".Login"
-            android:label="Login page"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Login page" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
