--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Smoke_login_firebase">
         <activity
-            android:name=".Health"
+            android:name=".Rate"
             android:exported="true" />
+        <activity
+            android:name=".Feedback"
+            android:exported="true" />
+        <activity
+            android:name=".Profile"
+            android:exported="true"
+            android:label="Profile" />
+        <activity
+            android:name=".Health"
+            android:exported="true"
+            android:label="Health" />
         <activity
             android:name=".Workout"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".UserDetails"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Personal details" />
         <activity
             android:name=".GraphPage"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Progress" />
         <activity
             android:name=".HomePage"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Home Page" />
         <activity
             android:name=".Register22"
             android:exported="true"
